# open-source-llms

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  requirements_windows.txt
examples/: smoke_test.py
notebooks/: 01_hf_token_test.ipynb  02_tinyllama_local_explore.ipynb
