[project]
name = "open-source-llms"
version = "0.1.0"
description = "Personal sandbox for exploring open-source LLMs with Hugging Face and PyTorch (uv-managed)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=4.8.4",
    "huggingface-hub>=1.10.2",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "safetensors>=0.7.0",
    "tokenizers>=0.22.2",
    "transformers>=5.5.4",
]
